// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test custom StringPrompt 1`] = `
"_grp: 1
_type: constructor
_id:
  - events
  - input
  - load
  - prompts
  - text
  - StringPrompt
_kwargs:
  value: this is a test prompt.
"
`;

exports[`test custom StringPrompt 2`] = `
"- _grp: 1
  _type: constructor
  _id:
    - events
    - input
    - load
    - msgs
    - human
    - HumanMessage
  _kwargs:
    content: this is a test prompt.
"
`;
